--- a/feature/build.gradle
+++ b/feature/build.gradle
@@ -25,3 +25,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     
 }
+
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.google.code.gson:gson:2.7' //Gsonライブラリ
+}
